--- a/scraper/package.json
+++ b/scraper/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "i": "^0.3.7",
     "npm": "^10.8.3",
+    "puppeteer": "^23.4.0",
     "puppeteer-core": "^23.4.0"
   }
 }
